# philad-cfo

./: .gitignore  AGENTS.md  CLAUDE.md  DESIGN.md  README.md  pyproject.toml  requirements.txt
config/: .env.example  config.yaml.example
scripts/: install.sh  plaid_link.py  setup.sh
skills/: SKILL.md
skills/investment-monitor/: SKILL.md
skills/mortgage-planning/: SKILL.md
skills/net-worth/: SKILL.md
skills/personal-finance/: SKILL.md
skills/research/: SKILL.md
skills/spending/: SKILL.md
src/: __init__.py  cli.py  config.py  ibkr_client.py  kb.py  perplexity_client.py  plaid_client.py
src/monitors/: __init__.py  daily_report.py  hourly.py
src/output/: __init__.py  discord.py  markdown_report.py
src/skills/: __init__.py  sync.py
tests/: __init__.py  test_config.py  test_kb.py  test_monitors.py  test_plaid_client.py
